--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,4 +50,4 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.SSH_PORT }}
         script_stop: true
-        script: "./startup.sh"
+        script: "./startupEureka.sh"
