--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,7 @@
     </parent>
     <groupId>com.nhnacademy</groupId>
     <artifactId>eureka</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>eureka</name>
+    <name>eka</name>
     <description>eureka</description>
     <properties>
         <java.version>21</java.version>
